tests/checker/diagnostics/0646_functor_opaque_result_operator_mismatch_09.ml.infer.expected
File "0646_functor_opaque_result_operator_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0646_functor_opaque_result_operator_mismatch_09 is not a valid module name.

File "0646_functor_opaque_result_operator_mismatch_09.ml", line 22, characters 8-18:
22 | let _ = Out_iota.y + 9
             ^^^^^^^^^^
Error: The value Out_iota.y has type Out_iota.u = Make_iota(Input_iota).u
       but an expression was expected of type int
